emumaster (0.0.3) unstable; urgency=low

  * completely redesigned UI
  * favourites category
  * workaround for sound bug (e.g. fix Mario Kart) - thanks to javispedro
  * added name filters based on disk extension
  * unified in-game menu
  * better scaler when selecting an icon for the home screen
  * information on few first runs
  * N900 build

 -- elemental <mar.kazmierczak@gmail.com>  Wed, 01 Sep 2011 10:02:09 +0200

emumaster (0.0.2) unstable; urgency=low

  * added gba emulation
  * added snes emulation
  * added psx <alpha> emulation
  * added page to select the console
  * user can select his own cover in disk gallery
  * states are compressed now
  * pad look redesigned (in-game exit button and L/R buttons added as well)
  * settings look refreshed
  * settings are saved now
  * added pad opacity option
  * added keep aspect ratio option
  * added option to remove icon from home screen (disk gallery)
  * added item in menu to remove disk (disk gallery)
  * added item in menu to run game with autoload disabled (disk gallery)
  * switched to asynchronous pulse audio
  * added accelerometer support
  * volume buttons now works correctly
  * redesigned architecture to speed up things
  * fixed bug in pad: when you touch on edge pad didn't work
  * fixed crash on pause button
  * render method for nes ppu can now be selected
  * nes game genie codes enable/disable fixed
  * nes empahasis/mask fix (several titles displayed white screen)
  * nes mappers:
     added: 200,201,202,222,225,226,227,228,229,230,231,232,233,235,236,240,241,242,243,244,246,251,252,254,255
	 fixed: 2

 -- elemental <mar.kazmierczak@gmail.com>  Wed, 01 Sep 2011 10:02:09 +0200

emumaster (0.0.1) unstable; urgency=low

  * Initial Release.

 -- elemental <mar.kazmierczak@gmail.com>  Wed, 24 Aug 2011 19:02:09 +0200